--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
+    <header>
       <img src="images/Logo.png" alt="Logo" />
+    </header>
+    <!-- container -->
+    <div class="container">
+      <!-- encriptado -->
       <div class="encriptado">
         <textarea
+          class="texto"
           name="encriptado"
           id="encriptado"
-          cols="30"
-          rows="10"
+          cols="50"
+          rows="50"
           placeholder="Ingresa el texto aqui"
         ></textarea>
+        <!-- advertencia -->
         <div class="advertencia">
-          <!-- <img src="images/advertencia.png" alt="advertencia" /> -->
+          <img
+            class="advertencia-logo"
+            src="images/advertencia.png"
+            alt="advertencia"
+          />
           <p>Solo letras minusculas y sin acentos</p>
         </div>
         <div class="butons">
@@ -42,8 +52,16 @@
           <p id="parrafo">
             Ingresa el texto que desees encriptar o desencriptar
           </p>
-          <div class="text-encriptado">
-            <textarea name="text-encriptado" id="text-encriptado"></textarea>
+        </div>
+        <div class="text-encriptado">
+          <div class="content-encriptado">
+            <textarea
+              class="texto2"
+              cols="30"
+              rows="20"
+              name="text-encriptado"
+              id="text-encriptado"
+            ></textarea>
             <div class="buton">
               <button class="copiar" type="button" onclick="copiar()">
                 Copiar
